--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
     }
     buildFeatures {
         viewBinding = true
+        dataBinding = true
     }
 }
 
@@ -51,6 +52,7 @@ dependencies {
     implementation 'com.github.Acccord:AndroidSerialPort:1.5.0'
     implementation 'androidx.activity:activity-ktx:1.6.1'
     implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation "androidx.recyclerview:recyclerview:1.3.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'  //协程
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"  //lifecycle
@@ -61,6 +63,8 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "io.coil-kt:coil:2.2.2"  //Coil
+    implementation 'io.coil-kt:coil-video:2.2.2'
+    implementation 'com.guolindev.permissionx:permissionx:1.7.1'  //permission X
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
