--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'kotlinx-serialization'
     id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -44,6 +46,7 @@ android {
 dependencies {
     def lifecycle_version = "2.6.0"
     def nav_version = "2.5.3"
+    def exo_player_version = "2.18.4"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -64,7 +67,10 @@ dependencies {
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "io.coil-kt:coil:2.2.2"  //Coil
     implementation 'io.coil-kt:coil-video:2.2.2'
+    implementation "com.google.android.exoplayer:exoplayer-core:$exo_player_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exo_player_version"
     implementation 'com.guolindev.permissionx:permissionx:1.7.1'  //permission X
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
