完成后台界面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,9 @@ android {
     }
     buildFeatures {
         viewBinding = true
-        dataBinding = true
+
     }
+    buildFeatures.dataBinding = true
 }
 
 dependencies {
