--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,20 @@ android {
 
     }
     buildFeatures.dataBinding = true
+
+    // 自定义apk文件名
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+
+            if (outputFile != null && outputFile.name.endsWith('.apk')) {
+
+                if (variant.buildType.name.equals('release')) {
+                    outputFileName = "PicoFull_${defaultConfig.versionName}.apk"
+                }
+
+            }
+        }
+    }
 }
 
 dependencies {
