--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
             if (outputFile != null && outputFile.name.endsWith('.apk')) {
 
                 if (variant.buildType.name == 'release') {
-                    outputFileName = "PicoFull_${defaultConfig.versionName}.apk"
+                    outputFileName = "BVLASER_${defaultConfig.versionName}.apk"
                 }
 
             }
@@ -59,17 +59,17 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "2.6.0"
+    def lifecycle_version = "2.6.1"
     def nav_version = "2.5.3"
-    def exo_player_version = "2.18.4"
+    def exo_player_version = "2.18.5"
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.Acccord:AndroidSerialPort:1.5.0'
-    implementation 'androidx.activity:activity-ktx:1.6.1'
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
+    implementation 'androidx.activity:activity-ktx:1.7.0'
+    implementation "androidx.fragment:fragment-ktx:1.5.6"
     implementation "androidx.recyclerview:recyclerview:1.3.0"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'  //协程
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
@@ -85,6 +85,9 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-core:$exo_player_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exo_player_version"
     implementation 'com.guolindev.permissionx:permissionx:1.7.1'  //permission X
+
+    //implementation 'com.github.JessYanCoding:AndroidAutoSize:v1.2.1'
+
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
